first file in fourth dir

--- a/.gitconfig
+++ b/.gitconfig
@@ -2,4 +2,4 @@
 [user]
 # Please adapt and uncomment the following lines:
 	name =giriskht7896 
-#	email = giriskht7896@gmail.com
+	email = giriskht7896@gmail.com
